<resources>
    <string name="app_name">ScreenTracking</string>
    <string name="set_birth_date">дата рождения ребенка</string>
    <string name="set_child_gender">пол ребенка</string>
    <string name="set_child_name">имя ребенка</string>
    <string name="set_email">укажите вашу электронную почту</string>
    <string name="save">сохранить</string>
    <string name="how_to_hide">Зайдите в панель приложений. На смартфоне иконка расположена в нижней
        панели главного экрана и выглядит, как круг или квадрат с 6–9 квадратиками внутри. Открыв панель,
        вы увидите иконки установленных программ. Вверху вы увидите вкладки «Приложения» и «Виджеты».
        Перейдите на вкладку приложений. Найдите кнопку, открывающую меню дополнительных опций на телефоне.
        В новых моделях смартфонов она располагается в правом верхнем углу экрана, в предыдущих – в правом или левом нижнем.
        Коснитесь кнопки и выберите пункт «Скрыть приложения». Отметьте галочками иконки, которые хотите скрыть.
        Количество выбранных значков отображается вверху дисплея. Нажмите кнопку «Готово» в верхней части дисплея справа –
        иконка исчезнет с панели приложений</string>
</resources>