<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_child_birth_date" />

    <Button
        android:id="@+id/btn_child_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_child_gender" />

    <Button
        android:id="@+id/btn_child_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_child_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/set_email"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left" />

    <Button
        android:id="@+id/btn_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:padding="@dimen/padding_small"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="8dp"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_child_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="44dp"
        android:padding="@dimen/padding_small"
        android:text="@string/set_child_name"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_child_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_child_birth_date" />

    <TextView
        android:id="@+id/tv_child_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/set_birth_date"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/et_child_birth_date" />

    <EditText
        android:id="@+id/et_child_birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="8dp"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_child_gender" />

    <TextView
        android:id="@+id/tv_child_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="8dp"
        android:padding="@dimen/padding_small"
        android:text="@string/set_child_gender"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintTop_toBottomOf="@+id/et_child_gender" />

    <EditText
        android:id="@+id/et_child_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:layout_marginTop="136dp"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_right"
        app:layout_constraintTop_toBottomOf="@+id/tv_child_name" />

</androidx.constraintlayout.widget.ConstraintLayout>